// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SearchHint should match snapshot, with title 1`] = `
<Fragment>
  <h4>
    <FormattedMessage
      defaultMessage="Search Options"
      id="search_bar.usage.title"
      values={Object {}}
    />
  </h4>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="* Use **\\"quotation marks\\"** to search for phrases\\\\n* Use **from:** to find posts from specific users and **in:** to find posts in specific channels\\\\n* Use **on:** to find posts on a specific date\\\\n* Use **before:** to find posts before a specific date\\\\n* Use **after:** to find posts after a specific date"
    id="search_bar.usage.tips"
  />
</Fragment>
`;

exports[`components/SearchHint should match snapshot, without title 1`] = `
<Fragment>
  <InjectIntl(FormattedMarkdownMessage)
    defaultMessage="* Use **\\"quotation marks\\"** to search for phrases\\\\n* Use **from:** to find posts from specific users and **in:** to find posts in specific channels\\\\n* Use **on:** to find posts on a specific date\\\\n* Use **before:** to find posts before a specific date\\\\n* Use **after:** to find posts after a specific date"
    id="search_bar.usage.tips"
  />
</Fragment>
`;
